api-reference/v1/webhooks/payment-failed.mdx
---
title: "PAYMENT FAILED"
description: "Technical reference for the PAYMENT_FAILED webhook event, including payload schema, field specifications, and implementation details."
---

---

## Event Overview

**Event Type**: `PAYMENT_FAILED`  
**Category**: Payment  
**Description**: Payment transaction has failed

This webhook is triggered when a customer's payment attempt fails through EximPe.

---

## Delivery Details

| Attribute | Value |
|-----------|--------|
| **HTTP method** | `POST` |
| **URL** | The webhook URL configured on your merchant account's API credentials |
| **Content-Type** | `application/json` |
| **Timeout** | 10 seconds |
| **Retries** | Up to 5 delivery attempts (backoff: 1 min, 5 min, 15 min, 60 min) |

### Headers

| Header | Description |
|--------|-------------|
| `Content-Type` | `application/json` |
| `User-Agent` | `Eximpe-Webhook/1.0` |
| `X-Webhook-Event` | `PAYMENT_FAILED` |
| `X-Webhook-Timestamp` | Unix timestamp (string) at the time of the request |
| `X-Webhook-Signature` | HMAC-SHA256 signature of the request body (JSON string with keys sorted, no extra whitespace), using your API key as the secret. Hex-encoded. |

**Signature verification (recommended):**  
Compute `HMAC-SHA256(encryption_key, raw_body)` where `raw_body` is the exact UTF-8 request body as received. Compare the hex result with the `X-Webhook-Signature` header to ensure the webhook is from the platform and unchanged.

---

## Payload Schema

<CodeGroup>

```json Example Payload
{
    "event_type": "PAYMENT_FAILED",
    "event_time": "2024-02-15 16:53:15Z",
    "version": "1.0",
    "sequence_number": "e40552bf-ed12-4f35-9a97-162d97e6fa34",
    "data": {
        "utr": null,
        "amount": 1000,
        "status": "FAILED",
        "message": "Cancelled by user",
        "mop_type": "UPI",
        "order_id": "OD3376378679",
        "link_id": null,
        "payment_id": "PR6938527534",
        "bank_ref_num": null,
        "extended_status": "FAILED",
        "payment_message": null,
        "subscription_id": null,
        "virtual_account_id": null,
        "payment_completed_at": null,
        "merchant_reference_id": "S2SIOAW7W4"
    }
}
```

</CodeGroup>

---

## Field Specifications

<Tabs>
  <Tab title="Root Level Fields">
    <ParamField path="event_type" type="string" required>
      Always `"PAYMENT_FAILED"` for this webhook event
    </ParamField>

    <ParamField path="event_time" type="string" required>
      Timestamp when the event occurred in ISO 8601 format
      
      **Example**: `"2024-02-15 16:53:15Z"`
    </ParamField>

    <ParamField path="version" type="string" required>
      Webhook payload version (currently "1.0")
    </ParamField>

    <ParamField path="sequence_number" type="string" required>
      Unique identifier for the event instance
      
      **Example**: `"e40552bf-ed12-4f35-9a97-162d97e6fa34"`
    </ParamField>

    <ParamField path="data" type="object" required>
      Event-specific data payload containing failed payment transaction details
    </ParamField>
  </Tab>

  <Tab title="Data Object Fields">
    <ParamField path="data.status" type="string" required>
      Payment status (FAILED for failed payments)
      
      **Example**: `"FAILED"`
    </ParamField>

    <ParamField path="data.message" type="string" required>
      Failure reason or message
      
      **Example**: `"Cancelled by user"`
    </ParamField>

    <ParamField path="data.mop_type" type="string" required>
      Method of payment type
      
      **Example**: `"UPI"`
    </ParamField>

    <ParamField path="data.amount" type="number" required>
      Payment amount
      
      **Example**: `1000`
    </ParamField>

    <ParamField path="data.order_id" type="string" required>
      Order ID
      
      **Example**: `"OD3376378679"`
    </ParamField>

    <ParamField path="data.link_id" type="string">
      ID of the payment link this payment was made through — the `link_id` that [Create Payment Link](/api-reference/v1/payment-link/create) returned. `null` when the payment was not made through a payment link; the key is always present. A buyer can try a link more than once, so several payments can carry the same `link_id`, each with its own `payment_id`. On some accounts `payment_id` and `link_id` can be the same value. Match the payment to your link on `link_id`; reconcile it by `payment_id`. Where each try is a payment of its own, a try that fails does not send this event; it arrives once, for the link itself, when the link closes without being paid, with `payment_id` equal to `link_id`.

      **Example**: `"PR4829301756"`
    </ParamField>

    <ParamField path="data.payment_id" type="string" required>
      Payment ID
      
      **Example**: `"PR6938527534"`
    </ParamField>

    <ParamField path="data.bank_ref_num" type="string">
      Bank reference number; typically null for failed payments
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.extended_status" type="string" required>
      Detailed status code for the payment
      
      **Example**: `"FAILED"`
    </ParamField>

    <ParamField path="data.payment_message" type="string">
      Additional processor-level message; may be null
    </ParamField>

    <ParamField path="data.utr" type="string">
      UTR of the payment (if any); may be null
    </ParamField>

    <ParamField path="data.subscription_id" type="string">
      Subscription ID if this payment is linked to a subscription mandate; otherwise null
    </ParamField>

    <ParamField path="data.virtual_account_id" type="string">
      Virtual account ID if this payment is linked to a VBA; otherwise null
    </ParamField>

    <ParamField path="data.merchant_reference_id" type="string" required>
      Your reference ID for the order
      
      **Example**: `"S2SIOAW7W4"`
    </ParamField>

    <ParamField path="data.payment_completed_at" type="string">
      ISO 8601 payment completion timestamp; null for failed payments
      
      **Example**: `null`
    </ParamField>
  </Tab>
</Tabs>

---