api-reference/v2/webhooks/payment-failed.mdx
---
title: "PAYMENT FAILED"
description: "Technical reference for the PAYMENT_FAILED webhook event, including payload schema, field specifications, and implementation details."
---

---

## Event Overview

**Event Type**: `PAYMENT_FAILED`  
**Category**: Payment  
**Description**: Payment transaction has failed

This webhook is triggered when a payment is marked FAILED (after a payment failed webhook/callback is received).

### When the webhook is sent

- **Payment failed flow:** After a payment failed webhook/callback is received, the payment is updated to FAILED and the webhook is created.
- The webhook is created **only if** your merchant account (or parent, for sub-merchants) has an active API credential with a non-empty webhook URL.

---

## Delivery Details

| Attribute | Value |
|-----------|--------|
| **HTTP method** | `POST` |
| **URL** | The webhook URL configured on your merchant account's API credentials |
| **Content-Type** | `application/json` |
| **Timeout** | 10 seconds |
| **Retries** | Up to 5 delivery attempts (backoff: 1 min, 5 min, 15 min, 60 min) |

### Headers

| Header | Description |
|--------|-------------|
| `Content-Type` | `application/json` |
| `User-Agent` | `Eximpe-Webhook/1.0` |
| `X-Webhook-Event` | `PAYMENT_FAILED` |
| `X-Webhook-Timestamp` | Unix timestamp (string) at the time of the request |
| `X-Webhook-Signature` | HMAC-SHA256 signature of the request body (JSON string with keys sorted, no extra whitespace), using your API key as the secret. Hex-encoded. |

**Signature verification (recommended):**  
Compute `HMAC-SHA256(encryption_key, raw_body)` where `raw_body` is the exact UTF-8 request body as received. Compare the hex result with the `X-Webhook-Signature` header to ensure the webhook is from the platform and unchanged.

---

## Payload Schema

<CodeGroup>

```json Example Payload
{
  "event_type": "PAYMENT_FAILED",
  "event_time": "2025-02-12T10:31:00.123456Z",
  "version": "2.0.0",
  "sequence_number": "660e8400-e29b-41d4-a716-446655440001",
  "data": {
    "payment_id": "770e8400-e29b-41d4-a716-446655440003",
    "order_id": "660e8400-e29b-41d4-a716-446655440001",
    "link_id": null,
    "status": "FAILED",
    "message": "Payment declined by bank",
    "mop_type": "CARD",
    "amount": 1000,
    "bank_ref_num": null,
    "extended_status": "FAILED",
    "payment_message": null,
    "payment_completed_at": null,
    "utr": null,
    "virtual_account_id": null,
    "subscription_id": null,
    "merchant_reference_id": "S2SIOAW7W4"
  }
}
```

</CodeGroup>

---

## Field Specifications

<Tabs>
  <Tab title="Root Level Fields">
    <ParamField path="event_type" type="string" required>
      Always `"PAYMENT_FAILED"` for this webhook event
    </ParamField>

    <ParamField path="event_time" type="string" required>
      ISO 8601 datetime when the webhook event was created
      
      **Example**: `"2025-02-12T10:31:00.123456Z"`
    </ParamField>

    <ParamField path="version" type="string" required>
      Envelope version (e.g. "2.0.0")
    </ParamField>

    <ParamField path="sequence_number" type="string" required>
      Unique identifier for this webhook event (UUID), useful for idempotency
      
      **Example**: `"660e8400-e29b-41d4-a716-446655440001"`
    </ParamField>

    <ParamField path="data" type="object" required>
      Payment request details (payment_id, order_id, link_id, status, message, mop_type, amount, bank_ref_num, extended_status, payment_message, payment_completed_at, utr, virtual_account_id, subscription_id, merchant_reference_id)
    </ParamField>
  </Tab>

  <Tab title="Data Object Fields">
    <ParamField path="data.payment_id" type="string" required>
      UID of the payment
      
      **Example**: `"770e8400-e29b-41d4-a716-446655440003"`
    </ParamField>

    <ParamField path="data.order_id" type="string" required>
      UID of the order for this payment
      
      **Example**: `"660e8400-e29b-41d4-a716-446655440001"`
    </ParamField>

    <ParamField path="data.link_id" type="string">
      ID of the payment link this payment was made through — the `link_id` that [Create Payment Link](/api-reference/v2/payment-link/create) returned. `null` when the payment was not made through a payment link; the key is always present. A buyer can try a link more than once, so several payments can carry the same `link_id`, each with its own `payment_id`. On some accounts `payment_id` and `link_id` can be the same value. Match the payment to your link on `link_id`; reconcile it by `payment_id`. Where each try is a payment of its own, a try that fails does not send this event; it arrives once, for the link itself, when the link closes without being paid, with `payment_id` equal to `link_id`.

      **Example**: `"PR4829301756"`
    </ParamField>

    <ParamField path="data.status" type="string" required>
      Payment status (FAILED for failed payments)
      
      **Example**: `"FAILED"`
    </ParamField>

    <ParamField path="data.message" type="string" required>
      Failure reason or message from the payment
      
      **Example**: `"Payment declined by bank"`
    </ParamField>

    <ParamField path="data.mop_type" type="string" required>
      Method of payment type
      
      **Example**: `"CARD"`
    </ParamField>

    <ParamField path="data.amount" type="number" required>
      Payment amount
      
      **Example**: `1000`
    </ParamField>

    <ParamField path="data.bank_ref_num" type="string">
      Bank reference number (if any); typically null for failed payments
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.extended_status" type="string" required>
      Detailed status code for the payment
      
      **Example**: `"FAILED"`
    </ParamField>

    <ParamField path="data.payment_message" type="string">
      Additional processor-level message; may be null
    </ParamField>

    <ParamField path="data.payment_completed_at" type="string">
      ISO 8601 datetime when payment completed; may be null for failed payments
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.utr" type="string">
      UTR of the payment (if any); may be empty or null
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.virtual_account_id" type="string">
      Virtual account ID of the MerchantVBA (if this payment is linked to a VBA); otherwise null
      
      **Example**: `null`
    </ParamField>

    <ParamField path="data.subscription_id" type="string">
      Subscription ID if this payment is linked to a subscription mandate; otherwise null
    </ParamField>

    <ParamField path="data.merchant_reference_id" type="string" required>
      Your reference ID for the order
      
      **Example**: `"S2SIOAW7W4"`
    </ParamField>
  </Tab>
</Tabs>

---

## What to Do When You Receive This Webhook

1. **Respond with HTTP 2xx** (e.g. `200 OK`) as soon as you have accepted the payload, so the platform marks the delivery as successful and does not retry.
2. **Verify the signature** using your API key and the raw request body (HMAC-SHA256, hex) to ensure authenticity.
3. **Use `data.payment_id` and `data.order_id`** to reconcile with your system or fetch more details from the Partner API.
